<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="@drawable/list_background"/>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <include layout="@layout/planet_background_layout"
                     android:id="@+id/planet_layout"/>

            <ImageView
                    android:layout_width="@dimen/avatar_size_details"
                    android:layout_height="@dimen/avatar_size_details"
                    app:layout_constraintTop_toBottomOf="@id/planet_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:src="@tools:sample/avatars"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    android:id="@+id/pilot_avatar"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/pilot_avatar"
                    app:layout_constraintTop_toTopOf="@id/pilot_avatar"
                    tools:text="DARK VADOR"
                    app:layout_constraintBottom_toBottomOf="@id/pilot_avatar"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.PilotName.Details"
                    app:layout_constraintBottom_toTopOf="@id/pickup"
                    android:id="@+id/pilot_name"/>
            <android.support.constraint.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier_divider"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="pilot_avatar,pilot_name"
            />
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/divider_center"
                    app:layout_constraintTop_toBottomOf="@id/barrier_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    android:id="@+id/divider"
            />

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    android:id="@+id/guideline_middle"
            />

            <!-- DEPARTURE -->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_departure_label"
                    android:textAppearance="@style/TextAppearance.Label.Details"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                    android:id="@+id/departure_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Value.Details"
                    app:layout_constraintTop_toBottomOf="@id/departure_label"
                    android:layout_marginTop="8dp"
                    android:id="@+id/departure_value"
                    app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                    tools:text="Naboo"
                    android:textAllCaps="true"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/departure_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Time.Details"
                    app:layout_constraintTop_toBottomOf="@id/departure_value"
                    android:id="@+id/departure_time"
                    app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                    tools:text="2:12 PM"
                    android:paddingEnd="16dp"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="@id/departure_value"
            />

            <!-- ARRIVAL -->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_arrival_label"
                    android:textAppearance="@style/TextAppearance.Label.Details"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/guideline_middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/arrival_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Value.Details"
                    app:layout_constraintTop_toBottomOf="@id/departure_label"
                    android:layout_marginTop="8dp"
                    android:id="@+id/arrival_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="coruscant"
                    android:textAllCaps="true"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/arrival_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Time.Details"
                    app:layout_constraintTop_toBottomOf="@id/arrival_value"
                    android:id="@+id/arrival_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="2:12 PM"
                    android:paddingEnd="16dp"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="@id/arrival_value"
            />

            <!-- DISTANCE -->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_distance_label"
                    android:textAppearance="@style/TextAppearance.Label.Details"
                    app:layout_constraintTop_toBottomOf="@id/departure_time"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                    android:id="@+id/distance_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Value.Details"
                    app:layout_constraintTop_toBottomOf="@id/distance_label"
                    android:layout_marginTop="8dp"
                    android:id="@+id/distance_value"
                    app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                    tools:text="2,434,433 km"
                    android:textAllCaps="true"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/distance_label"
            />
            <!-- DURATION -->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_duration_label"
                    android:textAppearance="@style/TextAppearance.Label.Details"
                    app:layout_constraintTop_toBottomOf="@id/arrival_time"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/guideline_middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/duration_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Value.Details"
                    app:layout_constraintTop_toBottomOf="@id/duration_label"
                    android:layout_marginTop="8dp"
                    android:id="@+id/duration_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="5:23:45"
                    android:textAllCaps="true"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/duration_label"
            />
            <!-- RATINGS -->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_rating_label"
                    android:textAppearance="@style/TextAppearance.Label.Details"
                    app:layout_constraintTop_toBottomOf="@id/distance_value"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/ratings_label"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_no_rating_label"
                    android:textAppearance="@style/TextAppearance.Rating.EmptyState.Details"
                    app:layout_constraintTop_toBottomOf="@id/ratings_label"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="19dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    android:id="@+id/empty_rating"
            />
            <ImageView
                    android:layout_width="@dimen/star_details"
                    android:layout_height="@dimen/star_details"
                    app:srcCompat="@drawable/star_big_empty"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="19dp"
                    app:layout_constraintTop_toBottomOf="@id/ratings_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/star1"
            />
            <ImageView
                    android:layout_width="@dimen/star_details"
                    android:layout_height="@dimen/star_details"
                    app:srcCompat="@drawable/star_big_empty"
                    android:id="@+id/star2"
                    app:layout_constraintStart_toEndOf="@id/star1"
                    app:layout_constraintTop_toTopOf="@id/star1"
                    app:layout_constraintBottom_toBottomOf="@id/star1"
            />
            <ImageView
                    android:layout_width="@dimen/star_details"
                    android:layout_height="@dimen/star_details"
                    app:srcCompat="@drawable/star_big_empty"
                    android:id="@+id/star3"
                    app:layout_constraintStart_toEndOf="@id/star2"
                    app:layout_constraintTop_toTopOf="@id/star2"
                    app:layout_constraintBottom_toBottomOf="@id/star2"
            />
            <ImageView
                    android:layout_width="@dimen/star_details"
                    android:layout_height="@dimen/star_details"
                    app:srcCompat="@drawable/star_big_empty"
                    android:id="@+id/star4"
                    app:layout_constraintStart_toEndOf="@id/star3"
                    app:layout_constraintTop_toTopOf="@id/star3"
                    app:layout_constraintBottom_toBottomOf="@id/star3"
            />
            <ImageView
                    android:layout_width="@dimen/star_details"
                    android:layout_height="@dimen/star_details"
                    app:srcCompat="@drawable/star_big_empty"
                    app:layout_constraintStart_toEndOf="@id/star4"
                    app:layout_constraintTop_toTopOf="@id/star4"
                    android:id="@+id/star5"
            />

            <android.support.constraint.Group android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              app:constraint_referenced_ids="star1, star2, star3, star4, star5"
                                              android:visibility="visible"
                                              android:id="@+id/rating_group"
                                              tools:visibility="visible"/>
            <ProgressBar
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:visibility="gone"
                    android:id="@+id/loader"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>